Correction Logo version mobile

--- a/P2_Reservia.css
+++ b/P2_Reservia.css
@@ -562,7 +562,9 @@ ul
 
     #logo2
     {
-        margin-top: 10px;
+        width: 100px;
+        height: 45px;
+        margin: 10px 0 0 15px;
     }
 
     #inscription
